# course-selection-backend

./: .gitignore  .gitmodules  .prettierrc.json  CHANGELOG.md  README.md  docker-compose.yml  tailwind.config.cjs  todo.md
crawler-bot/: Dockerfile  pyproject.toml  web_crawler.py
node/: Dockerfile  index.js  package-lock.json  package.json  talk.js
node/public/: index.html  upload.html
node/routes/: api.js  speech-recognize.js
node/src/: pool.js
node/views/: admin.hbs  admin.twig  base.twig  index.twig  manualner.hbs  manualner.twig  recognize.hbs  recognize.html  recognize.twig  upload.ejs  upload.hbs  upload.twig
python/: Dockerfile  pyproject.toml  pyserver.py  talk.py
python/example/: ner.py
python/func/: helper.py  ner_query.py  web_crawler.py  老師注音.csv  課程注音.csv
