[tool.poetry]
name = "crawler-bot"
version = "0.1.0"
description = ""
authors = ["exkuretrol <33695301+exkuretrol@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "crawler_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
beautifulsoup4 = "^4.11.1"
schedule = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
