[tool.poetry]
name = "python"
version = "0.1.0"
description = "used to communicate with node express server"
authors = ["exkuretrol <33695301+exkuretrol@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
requests = "^2.27.1"
pypinyin = "^0.46.0"
pandas = "^1.4.3"
Flask-Cors = "^3.0.10"
transformers = "^4.21.1"
SQLAlchemy = "^1.4.41"
pymysql = "^1.0.2"
python-dotenv = "^0.21.0"
bs4 = "^0.0.1"
torch = [
    {platform = 'darwin', url = "https://files.pythonhosted.org/packages/79/b3/eaea3fc35d0466b9dae1e3f9db08467939347b3aaa53c0fd81953032db33/torch-1.13.0-cp310-none-macosx_11_0_arm64.whl"},
    {platform = 'win32', version = "<1.13.0"}
]
lxml = "^4.9.1"
pprintpp = "^0.4.0"
selenium = "^4.7.2"
schedule = "^1.1.0"
ckip-transformers = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
